--- a/template.tex
+++ b/template.tex
@@ -1,13 +1,20 @@
 % Author: Castamere
 \documentclass[UTF8, a4paper, 12pt, AutoFakeBold]{ctexart} % 使用ctex以支持中文字符
 
-% 字体字号
+% MARK: 字体字号
 \usepackage{geometry}
 \setmainfont{Times New Roman}
+\newcommand{\sanhao}{\fontsize{16pt}{24pt}\selectfont}
+\newcommand{\xiaosan}{\fontsize{15pt}{22.5pt}\selectfont}
+\newcommand{\sihao}{\fontsize{14pt}{21pt}\selectfont}
+\newcommand{\xiaosi}{\fontsize{12pt}{18pt}\selectfont}
+\newcommand{\wuhao}{\fontsize{10.5pt}{15.75pt}\selectfont}
+\newcommand{\xiaowu}{\fontsize{9pt}{13.5pt}\selectfont}
+
 \renewcommand\CJKrmdefault{SimSun(0)}
 \setCJKmainfont{simsun.ttc}[AutoFakeBold]
 \geometry{left=3.18cm,right=3.18cm,top=2.54cm,bottom=2.54cm}
-\linespread{1.6}
+\linespread{1.5}
 
 % 引用相关
 \RequirePackage{natbib}
@@ -24,7 +31,7 @@
 
 \section{期刊}
 
-[序号] 作者. 题名\nobreak[J]. 刊名, 出版年份, 卷号(期号): 起止页码. 
+ [序号] 作者. 题名\nobreak[J]. 刊名, 出版年份, 卷号(期号): 起止页码.
 
 这是引用一篇中文期刊\cite{李静2021多语言}(作者数<3)
 
@@ -36,7 +43,7 @@
 
 \section{论文集}
 
-[序号] 作者. 题名\nobreak[A]. 见(英文用In): 主编. 论文集名\nobreak[C]. 出版地: 出版者, 出版年. 起止页码.
+ [序号] 作者. 题名\nobreak[A]. 见(英文用In): 主编. 论文集名\nobreak[C]. 出版地: 出版者, 出版年. 起止页码.
 
 这是引用一篇中文论文集\cite{封晨}
 
@@ -44,7 +51,7 @@
 
 \section{学位论文}
 
-[序号] 作者. 题名\nobreak[D]. 保存地点: 保存单位, 年.
+ [序号] 作者. 题名\nobreak[D]. 保存地点: 保存单位, 年.
 
 这是引用一篇中文学位论文\cite{姚歆蕾2021基于}
 
