--- a/template.tex
+++ b/template.tex
@@ -1,6 +1,9 @@
 % Author: Castamere
 \documentclass[UTF8, a4paper, 12pt, AutoFakeBold]{ctexart} % 使用ctex以支持中文字符
 
+\usepackage{titling}
+\title{智能知识侦察助手}
+
 % MARK: 字体字号
 \usepackage{geometry}
 \setmainfont{Times New Roman}
