--- a/template.tex
+++ b/template.tex
@@ -1,5 +1,5 @@
 % Author: Castamere
-\documentclass[UTF8, a4paper, 12pt, AutoFakeBold]{ctexart} % 使用ctex以支持中文字符
+\documentclass[UTF8, a4paper, 12pt, AutoFakeBold, twoside]{ctexart} % 使用ctex以支持中文字符
 
 \usepackage{titling}
 \title{智能知识侦察助手}
@@ -19,14 +19,30 @@
 \geometry{left=3.18cm,right=3.18cm,top=2.54cm,bottom=2.54cm}
 \linespread{1.5}
 
+% MARK: 页眉页脚
+\usepackage{fancyhdr}
+
+\fancypagestyle{tocstyle}{
+	\fancyhf{}
+	\renewcommand{\headrulewidth}{0pt}
+	\fancyfoot[C]{\xiaowu\thepage}
+}
+
+\fancypagestyle{mainstyle}{
+	\fancyhf{}
+    \setlength{\headheight}{15.75pt}
+	\renewcommand{\headrulewidth}{0.3pt}
+	\fancyhead[CO]{\wuhao\texttt{浙江理工大学本科毕业设计（论文）}}
+	\fancyhead[CE]{\wuhao\texttt{\thetitle}}
+	\fancyfoot[CE,CO]{\xiaowu\thepage}
+}
+
 % 引用相关
 \RequirePackage{natbib}
 \bibliographystyle{references/castamere}
 \bibpunct{[}{]}{;}{s}{,}{,} % 第一，二个参数为括号样式，可以换成小括号
 \usepackage[hidelinks]{hyperref} % 用于超链接
 \newcommand{\fullcite}[1]{(\citeauthor{#1}, \citeyear{#1})\cite{#1}} % 自定义引用指令
-
-\pagestyle{empty} % 去掉页眉页脚等，与引用无关
 
 %%%%%%%%%%% 正文
 
