--- a/template.tex
+++ b/template.tex
@@ -19,6 +19,16 @@
 \geometry{left=3.18cm,right=3.18cm,top=2.54cm,bottom=2.54cm}
 \linespread{1.5}
 
+% MARK: 目录相关
+\usepackage{tocloft}
+\setlength\cftbeforetoctitleskip{0ex}
+\setlength\cftaftertoctitleskip{0ex}
+\setlength\cftbeforepartskip{0ex}
+\setlength\cftbeforesecskip{0ex}
+\renewcommand{\cftsecfont}{\xiaosi\heiti}
+\renewcommand{\cftsubsecfont}{\wuhao\songti}
+\renewcommand{\cftsubsubsecfont}{\wuhao\fangsong}
+
 % MARK: 页眉页脚
 \usepackage{fancyhdr}
 
