修改 section 页码字号

--- a/template.tex
+++ b/template.tex
@@ -56,6 +56,7 @@
 \renewcommand{\cftsecleader}{\cftdotfill{\cftdotsep}}
 \renewcommand{\cftsubsecfont}{\wuhao\songti}
 \renewcommand{\cftsubsubsecfont}{\wuhao\fangsong}
+\renewcommand{\cftsecpagefont}{\normalfont}
 
 % MARK: 页眉页脚
 \usepackage{fancyhdr}
