--- a/template.tex
+++ b/template.tex
@@ -122,7 +122,7 @@
 
 % MARK: 前言
 \includepdf[pages=-]{preface/诚信声明.pdf}
-\include{preface/abstruct}
+\include{preface/abstruct} % 摘要
 \include{preface/toc}
 
 % MARK: 正文
@@ -138,7 +138,7 @@
 \phantomsection\addcontentsline{toc}{section}{参考文献}
 \bibliography{references/references}
 \newpage
-\include{appendice/thanks}
-\include{appendice/appendice}
+\include{appendice/thanks} % 致谢
+\include{appendice/appendice} % 附录
 
 \end{document}
