--- a/preface/abstruct.tex
+++ b/preface/abstruct.tex
@@ -6,14 +6,12 @@
 \pdfbookmark[1]{摘要}{bookmark:摘要}
 \cftaddtitleline{toc}{part}{\sihao\heiti\mdseries 摘 \quad 要}{}
 
-\renewcommand{\abstractname}{\heiti\xiaosan\mdseries 摘 \quad 要}
-\begin{abstract}
+{\begin{center}\heiti\xiaosan\mdseries 摘 \quad 要\end{center}}
 
-    \lipsum[1-3]
+\lipsum[1-3]
 
-    \vspace{0.5ex}
-    \noindent{\heiti 关键词：}物理；化学；数学；etc.；etc.
-\end{abstract}
+\vspace{1ex}
+\noindent{\heiti 关键词：}在线学习系统；在线复习系统；遗忘曲线；Next.js；etc.；etc.
 \clearpage
 
 % \phantomsection\addcontentsline{toc}{section}{\sihao Abstruct}
@@ -21,12 +19,10 @@
 \pdfbookmark[1]{Abstruct}{bookmark:Abstruct}
 \cftaddtitleline{toc}{part}{\sihao\mdseries Abstruct}{}
 
-\renewcommand{\abstractname}{\xiaosan\mdseries Abstract}
-\begin{abstract}
+{\begin{center}\xiaosan\mdseries Abstract\end{center}}
 
-    \lipsum[4-6]
+\lipsum[4-6]
 
-    \vspace{0.5ex}
-    \noindent\textbf{Keywords: }Physics; Chemistry; Mathmatics; etc.; etc.
-\end{abstract}
+\vspace{1ex}
+\noindent\textbf{Keywords: }Physics; Chemistry; Mathmatics; etc.; etc.
 \clearpage
